fixed issue with cart modal z-index

--- a/src/components/cart/Modal.css
+++ b/src/components/cart/Modal.css
@@ -17,7 +17,7 @@ body.active-modal {
     right: 0;
     bottom: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 99;
 }
 
 .overlay {
